--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "random change for webinar for presentation",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://madhavbahl.tech/portfolio",
